# local_scribe

./: .env.example  .gitignore  README.md  pyproject.toml  qwen_asr.py  settings.yaml
