[project]
name = "local-scribe"
version = "0.1.0"
description = "Local speech-to-text transcription using Qwen ASR on Apple Silicon"
requires-python = ">=3.11"
dependencies = [
    "mlx-audio @ git+https://github.com/Blaizzy/mlx-audio.git",
    "mlx-lm",
    "python-dotenv>=1.0.0",
    "pyyaml",
    "sounddevice",
    "soundfile",
]

[project.optional-dependencies]
pyannote = ["pyannote.audio>=3.3.0"]
